@@ -525,10 +525,11 @@ static void AttrCancelCb(Widget w,XtPointer client,XtPointer call)
  */
 static void AttrDumpCb(Widget w,XtPointer client,XtPointer call)
 {
+    char buf[HUGE_BUF];
   Attr self = (Attr)client;
 
-  dump_object(self->op);
-  CnvBrowseShowString(self->dump,errmsg); 
+  dump_object(self->op, buf, sizeof(buf));
+  CnvBrowseShowString(self->dump,buf); 
 }
 
 /**********************************************************************
