@@ -13,7 +13,7 @@ extern void init_archetypes(void);
 extern void arch_info(object *op);
 extern void clear_archetable(void);
 extern void init_archetable(void);
-extern void dump_arch(archetype *at);
+extern void dump_arch(archetype *at, char* buf, int size);
 extern void dump_all_archetypes(void);
 extern void free_arch(archetype *at);
 extern void free_all_archs(void);
@@ -182,7 +182,7 @@ extern int can_merge(object *ob1, object *ob2);
 extern signed long sum_weight(object *op);
 extern object *object_get_env_recursive(object *op);
 extern object *get_player_container(object *op);
-extern void dump_object(object *op);
+extern void dump_object(object *op, char* buf, int size);
 extern void dump_all_objects(void);
 extern object *find_object(tag_t i);
 extern object *find_object_name(const char *str);
